B&L QA/objects/Translation_Table__c.object
<CustomObject>
    <description>To store configuration entries used by the integration functionality</description>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <label>SETID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_Record_Type_Id__c</fullName>
        <label>SFDC Account Record Type Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Translation Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TT{0000000000}</displayFormat>
        <label>Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translation Tables</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>